
[package]
authors = [""]
edition = "2021"
name = ""
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
#napi = "3.0.0"
#napi-derive = "3.0.0"

solana-sdk = "2.0.25"
solana-client = "2.0.25"
solana-program = "2.0.7"
anyhow = "1.0.98"  # 简化错误处理
thiserror = "1.0.69"  # 自定义错误类型

reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.140"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "1.5.7"

anchor-lang = "0.25.0"
anchor-spl = "0.25.0"

anchor-client = "0.31.1"
spl-associated-token-account = "5.0.0"
futures = "0.3.25"

#napi = "3.0.0"
napi = { version = "3.0.0", features = ["tokio_rt"] }  # 支持 async
napi-derive = "3.0.0"
dotenv = "0.15.0"


[build-dependencies]
napi-build = "2.2.1"

[profile.release]
lto = true
strip = "symbols"
